--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lemon&family=Outfit:wght@300;400;500;600;700&display=swap");
 html {
-  background: url(bg.jpg) no-repeat center center fixed;
+  background: url(./imgs/bg.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -9,6 +9,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 32px;
+  flex-direction: column;
 }
 
 .logo {
@@ -50,9 +51,9 @@ body {
 
 .form {
   background-color: white;
-  padding: 16px;
+  padding: 32px;
   width: 100%;
-  max-width: 648px;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -63,7 +64,6 @@ body {
 
 .card-img {
   width: 80px;
-  height: 80px;
   border-radius: 12px;
 }
 
@@ -72,7 +72,7 @@ body {
   align-items: center;
   gap: 8px;
   flex-direction: column;
-  width: 100%;
+  width: calc(100% - 96px);
 }
 
 .card-title-date {
@@ -143,6 +143,7 @@ button {
   font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
+  margin-top: 16px;
 }
 
 button:hover {
