--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ body {
   align-items: center;
   gap: 8px;
   flex-direction: column;
-  width: calc(100% - 96px);
+  width: 100%;
 }
 
 .card-title-date {
