--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ input {
   border: 1px solid var(--gray-300, #cbd5e0);
   background: var(--monochromatic-white, #fff);
   font-size: 14px;
+   width: 100%;
 }
 button {
   display: flex;
