--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 32px;
+  gap: 16px;
   flex-direction: column;
   width: 100%;
   max-width: 100%;
@@ -36,23 +36,31 @@ body {
 
 .entries {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: start;
-  gap: 16px;
-  flex-direction: column;
+  gap: 32px;
   width: 100%;
+  max-width: 1200px;
 }
 
 .card {
-  background-color: white;
+  max-width: calc(33.333% - 32px); /* Adjust width as necessary */
   padding: 16px;
   width: 100%;
-  max-width: 648px;
   display: flex;
   flex-direction: row;
   gap: 16px;
-  border-radius: 16px;
-  box-shadow: 0px 0px 28px 0px rgba(223, 153, 186, 0.24);
+  border-radius: 12px;
+  border: 2px solid #e3a0c1;
+  background: #fff;
+  box-shadow: 8px 8px 0px 0px #e3a0c1;
+}
+
+@media (max-width: 1200px) {
+  .card {
+    max-width: 100%;
+    width: 100%; /* Full width on mobile */
+  }
 }
 
 .form {
@@ -69,8 +77,9 @@ body {
 }
 
 .card-img {
-  width: 80px;
-  border-radius: 12px;
+  min-width: 80px;
+  min-height: 80px;
+  border-radius: 8px;
 }
 
 .card-info {
@@ -78,6 +87,7 @@ body {
   align-items: center;
   gap: 8px;
   flex-direction: column;
+  justify-content: space-between;
   width: 100%;
 }
 
@@ -92,6 +102,10 @@ body {
 
 .card-person {
   width: 100%;
+  align-items: flex-start;
+  display: flex;
+  text-align: start;
+  justify-content: space-between;
 }
 
 .section {
@@ -104,7 +118,7 @@ body {
 h2 {
   color: #76554c;
   font-family: Lemon;
-  font-size: 26px;
+  font-size: 18px;
   font-weight: 600;
   margin: 0;
 }
@@ -133,8 +147,9 @@ input {
   border: 1px solid var(--gray-300, #cbd5e0);
   background: var(--monochromatic-white, #fff);
   font-size: 14px;
-   width: 100%;
+  width: 100%;
 }
+a,
 button {
   display: flex;
   height: 40px;
@@ -151,6 +166,8 @@ button {
   font-weight: 600;
   text-transform: uppercase;
   margin-top: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
 }
 
 button:hover {
@@ -161,6 +178,25 @@ button:hover {
 .card:hover {
   cursor: pointer;
   animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 32px;
+}
+
+.btnHolder {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: end;
+  gap: 32px;
+  width: 100%;
+  max-width: calc(1200px - 64px);
+}
+.addpage {
+  width: 180px;
 }
 
 @keyframes rotate-90-cw {
